# pwninit

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cpu_arch.rs  debian_libc.rs  docker_libc.rs  fetch_ld.rs  fetch_libc.rs  http_retry.rs  lib.rs  libc_deb.rs  libc_search.rs  libc_version.rs  main.rs  opts.rs  output.rs  patch_bin.rs  pwninit.rs  solvepy.rs  template.py  template_rev.py  unstrip_libc.rs  uv_venv.rs  warn.rs
src/elf/: build_id.rs  has_debug_syms.rs  parse.rs
