[package]
name = "pwninit"
version = "3.11.0"
authors = ["Sherlock Holmes"]
edition = "2021"
description = "automate starting binary exploit challenges"
repository = "https://github.com/sherlockholmestech/pwninit"
readme = "README.md"
keywords = ["pwn", "init", "binary", "elf", "exploit"]
license = "MIT"

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
twoway = "0.2.2"
goblin = "0.10.7"
ar = "0.9.0"
tar = "0.4.46"
rust-lzma = "0.6.0"
umask = "2.1.0"
is_executable = "1.0.6"
tempfile = "3.27.0"
colored = "3.1.1"
snafu = "0.9.1"
ex = "0.1.3"
derive_setters = "0.1.9"
strfmt = "0.2.5"
maplit = "1.0.2"
flate2 = "1.1.9"
zstd = "0.13.3"
version-compare = "0.2.1"
hex = "0.4.3"

serde_json = "1.0.150"

[dependencies.clap]
version = "4.6.1"
features = ["derive"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.reqwest]
version = "0.13.4"
features = ["blocking", "json"]
